# Project-Q-30-Days---Challenge

./: README.md  extract2.txt  generate_backend.py  generate_phase5.py  generate_phase6.py  generate_quantum_engine.py  organize.ps1
Day_15/: README.md
Mini_Project_2/quantum-platform-enterprise/backend/: .env  .env.example  init_db.py  main.py  pyproject.toml  quantum_db.sqlite3
Mini_Project_2/quantum-platform-enterprise/backend/api/: deps.py
Mini_Project_2/quantum-platform-enterprise/backend/core/config/: settings.py
Mini_Project_2/quantum-platform-enterprise/backend/core/exceptions/: base.py
Mini_Project_2/quantum-platform-enterprise/backend/core/logging/: json_logger.py
Mini_Project_2/quantum-platform-enterprise/backend/core/middleware/: logging_middleware.py
Mini_Project_2/quantum-platform-enterprise/backend/core/security/: jwt.py  password.py
Mini_Project_2/quantum-platform-enterprise/backend/database/: base.py  session.py
Mini_Project_2/quantum-platform-enterprise/backend/models/: analytics.py  audit.py  execution_history.py  experiment.py  user.py
Mini_Project_2/quantum-platform-enterprise/backend/quantum_engine/adapters/: qiskit_adapter.py
Mini_Project_2/quantum-platform-enterprise/backend/quantum_engine/algorithms/: base.py  bell_state.py
Mini_Project_2/quantum-platform-enterprise/backend/repositories/: base.py  user_repo.py
Mini_Project_2/quantum-platform-enterprise/backend/schemas/: user.py
Mini_Project_2/quantum-platform-enterprise/backend/services/: auth_service.py
Mini_Project_3/Quantum Security Toolkit (QST)/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
Mini_Project_3/Quantum Security Toolkit (QST)/.github/: PULL_REQUEST_TEMPLATE.md
Mini_Project_3/Quantum Security Toolkit (QST)/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
Mini_Project_3/Quantum Security Toolkit (QST)/.github/workflows/: codeql.yml  coverage.yml  lint.yml  test.yml
Mini_Project_3/Quantum Security Toolkit (QST)/examples/: 01_basic_bb84.py  02_eavesdropper_demo.py  03_parameter_sweep.py  04_export_results.py  05_visualization.py  06_complete_pipeline.py  07_real_hardware_placeholder.py
Mini_Project_3/Quantum Security Toolkit (QST)/notebooks/: BB84_Introduction.ipynb  Parameter_Sweeps.ipynb  Security_Analysis.ipynb
Mini_Project_3/Quantum Security Toolkit (QST)/src/qst/: __init__.py
Mini_Project_3/Quantum Security Toolkit (QST)/tests/: conftest.py  integration_matrix.md
Mini_Project_3/Quantum Security Toolkit (QST)/tests/e2e/: test_cli_pipeline.py  test_full_pipeline.py
Mini_Project_3/Quantum Security Toolkit (QST)/tests/fixtures/: __init__.py
Mini_Project_3/Quantum Security Toolkit (QST)/tests/integration/: __init__.py  test_analysis_pipeline.py  test_export_pipeline.py  test_visualization_pipeline.py
Mini_Project_3/Quantum Security Toolkit (QST)/tests/performance/: __init__.py  test_performance_benchmark.py
Mini_Project_3/Quantum Security Toolkit (QST)/tests/property/: __init__.py  test_invariants.py
Mini_Project_3/Quantum Security Toolkit (QST)/tests/unit/: __init__.py  test_cli.py  test_config.py  test_exceptions.py  test_models.py  test_validation.py
(+118 files in other folders)
