[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qst"
version = "0.1.0"
description = "Quantum Security Toolkit (QST)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ParaDise" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "qiskit>=1.0.0",
    "qiskit-aer>=0.14.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
]

[project.scripts]
qst = "qst.cli.main:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "D",   # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public module (we will document public interfaces/classes/functions)
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "qiskit.*",
    "qiskit_aer.*",
    "matplotlib.*",
    "hypothesis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=qst --cov-report=term-missing --cov-report=xml"
testpaths = [
    "tests",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "property: property-based tests",
    "performance: performance tests",
]
